build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml" {>= "4.04.0"}
  "dune" {>= "1.8"}
  "alcotest" {with-test & >= "0.8.1"}
  "bigstringaf"
  "result"
  "ppx_let" {with-test & >= "0.14.0"}
  "ocaml-syntax-shims" {build}
]
