load("@rules_cc//cc:defs.bzl", "cc_library")
load("@makeheaders//rules:makeheaders.bzl", "makeheaders")

CJSON_VERSION = "1.7.16"

load("//config/cc:CONFIG.bzl", "BASE_COPTS")

TIMEOUT = "short"

test_suite(
    name = "lexer",
    tests = [
        ":lexer_test"
    ]
)
########
cc_test(
    name       = "lexer_test",
    linkstatic = True,
    srcs       = [
        "lexer_test.c", "lex_string_driver.c",
        "lexer_test_init.c",
        ":mkhdrs"
    ],
    deps       = [
        "//lib/lexer:opam_lexer",
        "@gopt//lib:gopt",
        "@liblogc//lib:logc",
        "@unity//lib:unity",
        "@uthash//lib:uthash",
    ],
    copts      = BASE_COPTS + [
        "-I$(GENDIR)/test/unit/lexer",
    ],
    linkopts   = [],
    timeout    = TIMEOUT,
)

############
makeheaders(
    name = "mkhdrs",
    hdrs_srcs = [
        "lexer_test.c", "lex_string_driver.c",
        "lexer_test_init.c"
    ],
    additional_srcs = [
        "//lib/lexer:opam_lexer.c",
        "//lib/parser:opam_syntaxis.c",
    ] + select({
        "@obazl_tools_cc//profile:dev?": [
            "@liblogc//macros:ansi_colors.h",
            "@liblogc//macros:logging_debug.h",
        ],
        "//conditions:default": [
            "@liblogc//macros:logging_ndebug.h",
        ]
    }),
)
